# wsl

./: .gitignore  README.md  a1.fld  anilist_completed_diff_to_csv.mjs  anilist_completed_diff_to_csv.py  anilist_diff_tayo6_vs_namonaki.csv  assyuku1.fld  count_file.sh  disc_volume.sh  sql_paiza.sql  sql_paiza_1.sql  test.sh
atcoder/: abcsetup.sh  test_1.cpp  test_2.cpp  workspace.py
atcoder/AEDPC/: a.py
atcoder/ALPC/: a.py
atcoder/ac-library/: a
atcoder/green_50/: 11.py  16.py  17.py  20.py  23.py  24.py  25.py  26.py  27.py  28.py  30.py  31.py  33.py  8.py
atcoder/indeedなう(予選B)/: a.py
atcoder/other/: test.cpp
atcoder/reference/: PracticeA.py  bfs.py  dfs.py  function_test.py  test.py  test_C.py  test_youtube.py  尺取法.py
c++/falling_game/: CMakeLists.txt  build_main_cpp.sh  main.cpp
fortran/: a  a1.f90  a1.fld  assyuku1.fld  h1.f90  h1_1.f90  mac_method.fld  mac_method.mgf  microavs.py  paraview.py  senpai.f90  test.f90  translate.txt
fortran/a2/: a  a2.f90  a2.fld  a2_origin_0.f90  a2_origin_1.f90
paiza/: test.py
python/: SampleData.csv  asp_converter.py  deformation.csv  force.csv  microad1.py  microad_o1.py  microad_o2.py  microad_o2_library.py  mikan_hw.ipynb  mobileFactory.py  plt.py  sapu_plt.ipynb  sudoku.py  sudoku_image_recog.py  sudoku_reader.py  sudoku_solver.py  sudoku_solver_expand.py  yotube_playlist_fetch.py
python/shogi_serch_and_analyze/: app.py  app_daily_summary.py  backend.py  backend_db.py  backend_latest3.py  backend_recent2db.py  debug_last_kif.kif  debug_parse_error.kif  main.py  pyproject.toml  shogi_wars.db
(+699 files in other folders)
