[project]
name = "shogi-serch-and-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cshogi>=0.9.7",
    "matplotlib>=3.10.8",
    "playwright>=1.58.0",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
